[package]
name = "cynda_core"
version = "0.1.0"
edition = "2021"
authors = ["Shayan Golmezerji"]
description = "Ultra-low latency UDP messaging core for CyDnA protocol"
license = "CC-BY-4.0"
repository = "https://github.com/shayangolmezerji/cynda"

[dependencies]
tokio = { version = "1.40", features = ["net", "rt-multi-thread", "macros"] }
rkyv = { version = "0.7", features = ["std", "validation"] }
rkyv_derive = "0.7"
bytecheck = "0.7"
crc32fast = "1.3"
blake2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
statrs = "0.16"
rand_distr = "0.4"
num-complex = "0.4"
ndarray = "0.15"
plotly = "0.8"

[[bench]]
name = "protocol_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
